# coral

./: .coveragerc  .gitignore  BENCHMARKING.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_QA_REPORT.md  COMPUTATION_GRAPH_BENEFITS.md  COMPUTATION_GRAPH_DESIGN.md  Cargo.toml  DATA_INTEGRITY_QA_REPORT.md  DATA_INTEGRITY_TEST_SUMMARY.md  FEATURE_RECOMMENDATIONS.md  PERFORMANCE_QA_REPORT.md  PERFORMANCE_QA_SUMMARY.md  PQ_IMPLEMENTATION_SUMMARY.md  PROMPT.md  PUBLISHING.md  QA_CORRUPTION_TEST_REPORT.md  README.md  RELEASING.md  SPECIFICATION.md  benchmark.py  benchmark_computation_graphs.py  benchmark_delta_strategies.py  benchmark_graphs_simple.py  benchmark_old_vs_new.py  comprehensive_qa_summary.json  coverage.json  performance_demo.py  performance_profiler.py  performance_test_results.json  pyproject.toml  run_architecture_benchmark.py  run_benchmarks.py  run_data_integrity_qa.py  run_focused_arch_benchmark.py  run_performance_tests.py  run_simple_benchmark.py  security_audit_report.json  setup.py  (+2 more)
.coral/: config.json
.coral/refs/heads/: main
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
coral_bindings/: Cargo.toml  pyproject.toml
coral_bindings/src/: lib.rs
coral_pytorch_demo/.coral/checkpoints/: simple_model_training.json
coral_pytorch_demo/.coral/versions/: 2b9dbf69.json  4e35fde4.json  4ea82030.json  9d6d54b1.json  d4517c41.json  f9dc3c50.json
coral_test/: bias_weights.npy  model_weights.npy  new_layer.npy
coral_test/.coral/versions/: 6a23ecd8.json
docs/: API_DESIGN_REVIEW.md  GARBAGE_COLLECTION_GUIDE.md  cli_safetensors_commands.md  clustering_cli_guide.md  clustering_migration.md
docs/book/: README.md
docs/book/chapters/: 01-introduction.md  02-core-architecture.md  03-delta-encoding.md  04-storage-system.md  05-version-control.md  06-training-integration.md  07-cli-interface.md  08-advanced-features.md  09-performance-benchmarks.md  10-api-reference.md  11-configuration.md
docs/business/: BUSINESS_MODEL_IDEAS.md
docs/research/: weight-deduplication-methods.md
docs/review/: issue_categorization.md
examples/: advanced_compression_demo.py  automated_benchmark_example.py  automated_benchmark_runner_demo.py  basic_usage.py  centroid_pq_demo.py  centroid_pq_integration_demo.py  checkpoint_callbacks_demo.py  cluster_analysis_demo.py  cluster_hierarchy_demo.py  cluster_index_demo.py  cluster_index_example.py  cluster_storage_demo.py  clustering_cli_demo.py  clustering_comprehensive_demo.py  clustering_migration_demo.py  clustering_simple_demo.py  compression_ops_demo.py  computation_graph_demo.py  garbage_collection_demo.py  graph_storage_example.py  large_model_efficiency_demo.py  pq_simple_demo.py  product_quantization_demo.py  profiling_and_scalability_demo.py  run_qa_tests.py  safetensors_cli_demo.py  safetensors_conversion_demo.py  safetensors_demo.py  safetensors_reader_demo.py  safetensors_usage.py  storage_comparison.py
lib_coral/: Cargo.toml  build.rs
lib_coral/flatbuffers/: chunk.fbs  commit.fbs  common.fbs  snapshot.fbs  tensor.fbs  tile.fbs
lib_coral/src/: lib.rs
lib_coral/src/chunk/: chunk.rs  mod.rs  strategy.rs
lib_coral/src/commit/: mod.rs
lib_coral/src/config/: mod.rs
lib_coral/src/ref/: mod.rs
lib_coral/src/refs/: mod.rs
lib_coral/src/snapshot/: mod.rs
lib_coral/src/store/: mod.rs
lib_coral/src/tensor/: chunk.rs  dtype.rs  mod.rs  order.rs  tensor.rs  tile.rs
scripts/: bump_version.py
src/coral/: __init__.py
src/coral/cli/: CLAUDE.md  __init__.py  main.py
src/coral/clustering/: __init__.py  centroid_encoder.py  cluster_analyzer.py  cluster_assigner.py  cluster_config.py  cluster_hierarchy.py  cluster_index.py  cluster_index_centroid.py  cluster_manager.py  cluster_optimizer.py  cluster_storage.py  cluster_types.py
src/coral/compression/: CLAUDE.md  __init__.py  pruning.py  quantization.py
src/coral/config/: __init__.py  loader.py  schema.py  validation.py
src/coral/core/: CLAUDE.md  __init__.py  deduplicator.py  graph_deduplicator.py  graph_delta.py  lazy_weight.py  lsh_index.py  model_soup.py  simhash.py  similarity_index.py  weight_tensor.py
src/coral/delta/: CLAUDE.md  compression.py  delta_encoder.py  product_quantization.py
src/coral/experiments/: CLAUDE.md  __init__.py  experiment.py
src/coral/integrations/: CLAUDE.md  __init__.py  experiment_bridge.py  hf_trainer.py  huggingface.py  lightning.py  mlflow_bridge.py  pytorch.py  tensorflow.py  wandb_bridge.py
src/coral/registry/: CLAUDE.md  __init__.py  registry.py
src/coral/remotes/: CLAUDE.md  __init__.py  remote.py  sync.py
src/coral/safetensors/: __init__.py  converter.py  metadata.py  reader.py  types.py  writer.py
src/coral/storage/: CLAUDE.md  __init__.py  graph_storage.py  hdf5_store.py  migration.py  s3_store.py  (+2 more)
tests/: CLUSTERING_VULNERABILITY_REPORT.md  test_advanced_delta_encoding.py  test_backup_recovery.py  test_centroid_encoder.py  test_centroid_encoder_pq.py  test_cli.py  test_cli_clustering.py  test_cli_commands.py  test_cli_commands_coverage.py  test_cli_coverage_boost.py  test_cli_direct_coverage.py  test_cli_final_coverage.py  test_cli_migration.py  test_cli_safetensors.py  test_cluster_analyzer.py  test_cluster_assigner.py  test_cluster_hierarchy.py  test_cluster_index.py  test_cluster_migration.py  test_cluster_optimizer.py  test_cluster_storage.py  test_cluster_types.py  test_clustered_storage.py  test_clustering_benchmarks.py  test_clustering_edge_cases.py  test_clustering_integration.py  test_clustering_integration_comprehensive.py  test_clustering_integration_final.py  test_clustering_integration_simple.py  test_clustering_mock.py  test_clustering_regression.py  test_compression_ops.py  test_config.py  test_config_extended.py  test_coverage_boost.py  test_coverage_cli_comprehensive.py  test_coverage_cli_imports.py  test_coverage_final_4percent.py  test_coverage_final_80_percent.py  test_coverage_final_80_push.py  (+66 more)
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
(+107 files in other folders)
