[package]
name = "lib_coral"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
byteorder = "1.5.0"
dirs = "5.0.1"
flatbuffers = "24.3.25"
hex = "0.4.3"
serde = { version = "1.0.214", features = ["derive"] }
sha1 = "0.10.6"
tempfile = "3.14.0"
walkdir = "2.5.0"

[build-dependencies]
flatc-rust = "0.2.0"
